[tool.poetry]
name = "jellybench_py"
version = "0.1.0"
description = "Hardware Acceleration Benchmark - python Client for Jellyfin Hardware Survey"
authors = ["BotBlake <B0TBlake@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
requests = "^2.31.0"
wmi = { version = "*", markers = "sys_platform == 'win32'" }
py-cpuinfo = "^9.0.0"
progressbar2 = "^4.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
ruff = "^0.9.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jellybench = 'jellybench_py.core:main'
